tests/fail/mixed-contravariance-misuse.stderr
error: lifetime may not live long enough
  --> tests/fail/mixed-contravariance-misuse.rs:10:5
   |
6  | fn shorten<'b, 'short, 'long: 'short>(
   |                ------  ----- lifetime `'long` defined here
   |                |
   |                lifetime `'short` defined here
...
10 |     long_long
   |     ^^^^^^^^^ function was supposed to return data with lifetime `'long` but it is returning data with lifetime `'short`
   |
   = help: consider adding the following bound: `'short: 'long`
